native/speccy_core/bridge/speccy_bridge.h

/*
 * speccy_bridge.h - Plain-C-ABI header for the UnrealSpeccy Portable core.
 *
 * No JNI, no C++, no Android types. Callable from dart:ffi, and (via a thin
 * shim) from Java/Kotlin.
 *
 * Modelled on the 40 Java_app_simplespeccy_Emulator_* entry points in
 * SimpleSpeccy/platform/android/android.cpp, which are the battle-tested
 * inventory of what a host actually needs. Deliberately NOT modelled on
 * platform/library/main_library.cpp, which is an 89-line skeleton with no
 * audio, tape, save-state or joystick and returns 8-bit indexed video.
 *
 * Everything here routes to xPlatform::eHandler (platform/platform.h),
 * implemented once by eSpeccyHandler in speccy_handler.cpp. That handler is
 * not platform-coupled -- android.cpp and sdl2.cpp are both thin adapters
 * over it, and this bridge is a third.
 */
#ifndef RETRO_SPECTRUM_SPECCY_BRIDGE_H
#define RETRO_SPECTRUM_SPECCY_BRIDGE_H

#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

/* The ULA screen is a fixed 320x240 (eUla::S_WIDTH/S_HEIGHT). The border is
 * included; the Spectrum's own display is the inner 256x192. */
#define SPECCY_SCREEN_WIDTH  320
#define SPECCY_SCREEN_HEIGHT 240

/* Machine models, matching the "portabase" option the core registers. */
#define SPECCY_MODEL_48K  0
#define SPECCY_MODEL_128K 1

/* ---------------------------------------------------------------- lifecycle */

/*
 * Set the profile directory (where unreal_speccy_portable.xml and save data
 * live) and the resource directory (containing rom/ and font/). Must be
 * called before speccy_core_start().
 *
 * The Android build pushes ROMs in as buffers via -DUSE_EXTERN_RESOURCES
 * instead; speccy_core_set_rom() below is that path. Callers use one or the
 * other, not both.
 */
void speccy_core_init(const char *profile_dir, const char *resource_dir);

/*
 * Supply a ROM image as raw bytes, for hosts that ship ROMs as assets rather
 * than files (the -DUSE_EXTERN_RESOURCES path, as Emulator.InitRom does).
 * id selects which ROM: see SPECCY_ROM_* below. Must be called before
 * speccy_core_start(). The core copies the data; the caller keeps ownership.
 */
/* Ids match android.cpp's InitRom switch exactly -- do not renumber, or a
 * host that ships the Android asset order will load the wrong ROM. */
#define SPECCY_ROM_SOS128_0 0
#define SPECCY_ROM_SOS128_1 1
#define SPECCY_ROM_SOS48    2
#define SPECCY_ROM_SERVICE  3
#define SPECCY_ROM_DOS      4
void speccy_core_set_rom(int32_t id, const void *data, int32_t size);

/* Supply the 8x8 character font used by the on-screen UI (spxtrm4f.fnt). */
void speccy_core_set_font(const void *data, int32_t size);

/* Boot the core. Returns 0 on success, -1 on failure. */
int32_t speccy_core_start(void);

/* Shut the core down and release its devices. */
void speccy_core_stop(void);

/* 1 if the core has been started and not yet stopped. */
int32_t speccy_core_is_running(void);

/*
 * Advance emulation by one frame. Returns NULL normally, or a static error
 * string ("rzx_finished" and friends) -- this is eHandler::OnLoop's contract,
 * passed through unchanged.
 *
 * The host drives the frame loop, as Retro-Saturn's ymir_bridge_run_frame
 * does. The core does not spawn a thread of its own.
 */
const char *speccy_core_run_frame(void);

/* Pause/resume. While paused, run_frame is a no-op that still returns NULL. */
void speccy_core_set_paused(int32_t paused);

/* Hard reset. */
void speccy_core_reset(void);

/* ------------------------------------------------------------------- video */

/*
 * The current frame as RGBA8888, 320x240, tightly packed. The buffer is owned
 * by the bridge and stays valid until the next run_frame; the caller must not
 * free it. w/h may be NULL.
 *
 * The core itself renders 8-bit palette indices (eUla::Screen(), one byte per
 * pixel). No GL context is involved anywhere in this path: the 16-entry
 * palette is generated by the same bit formula gles2.cpp uses, so what the
 * host draws matches what the SDL2 and Android builds draw.
 */
const uint32_t *speccy_core_get_framebuffer(int32_t *w, int32_t *h);

/* Frame counter, incremented by each successful run_frame. */
int32_t speccy_core_get_frame_counter(void);

/* ------------------------------------------------------------------- audio */

/*
 * Drain up to max_bytes of signed 16-bit stereo PCM into dst. Returns the
 * number of bytes written, which may be 0. Pull model, as
 * Emulator.UpdateAudio and sdl2_audio.cpp both use.
 */
int32_t speccy_core_drain_audio(void *dst, int32_t max_bytes);

/* Sample rate the core mixes at. Set before start for best results. */
void speccy_core_set_sample_rate(int32_t rate);

/* Peak level of the most recent audio drain, 0..1000, for a UI meter. */
int32_t speccy_core_get_audio_level(void);

/* ------------------------------------------------------------------- input */

/*
 * A key event. key is an ASCII character or one of the core's own key codes;
 * flags is xPlatform::eKeyFlags (KF_DOWN, KF_SHIFT, KF_CTRL, KF_ALT, and the
 * joystick-mode selectors KF_KEMPSTON / KF_SINCLAIR2 / KF_CURSOR / KF_QAOPM).
 * Passed through to eHandler::OnKey unchanged.
 */
void speccy_core_key_event(int32_t key, int32_t flags);

/* Kempston joystick state as a bitmask, as Emulator.OnKempston takes it. */
void speccy_core_kempston(int32_t mask);

/* ------------------------------------------------------------------- media */

/* 1 if the core recognises this filename's extension. */
int32_t speccy_core_file_type_supported(const char *name);

/*
 * Open a tape, disk or snapshot: tap/tzx/csw, trd/scl/fdi/td0/udi, sna/z80/
 * szx/rzx, or a zip containing one. Returns 0 on success, -1 on failure.
 */
int32_t speccy_core_open_file(const char *path);

/* Open from memory, for hosts that hand over bytes rather than a path. */
int32_t speccy_core_open_data(const char *name, const void *data, int32_t size);

/* Save to path; the extension picks the format. 0 on success. */
int32_t speccy_core_save_file(const char *path);

/* Tape transport. state: 1 playing, 0 stopped, -1 no tape inserted. */
int32_t speccy_core_tape_state(void);
void speccy_core_tape_toggle(void);

/* 1 if the inserted disk has unsaved changes. */
int32_t speccy_core_disk_changed(void);

/* ------------------------------------------------------------- save states */

/*
 * Save state. The path MUST end in .sna -- it is the only snapshot format the
 * core can write. eFileTypeSNA is the sole eFileType overriding Store();
 * .z80 and .szx are load-only, and passing either here returns -1.
 * A 128K state is ~131KB.
 */
int32_t speccy_core_save_state(const char *path);

/* Load a state. Accepts everything the core can read: .sna, .z80, .szx. */
int32_t speccy_core_load_state(const char *path);

/* ----------------------------------------------------------------- options */

/*
 * The core's options are a global registry addressed by string name
 * (xOptions::eOption<T>::Find), already exposed over JNI as
 * Get/SetOptionInt/Bool. Same contract here. Unknown names are ignored on
 * set and return the supplied default on get.
 */
/* Names that exist in this build include "sound", "volume", "mode 48k" and
 * "joystick". Options declared by a host adapter rather than the engine (the
 * Android build's "skip frames", for one) are absent here. */
int32_t speccy_core_get_option_int(const char *name, int32_t fallback);
void speccy_core_set_option_int(const char *name, int32_t value);
int32_t speccy_core_get_option_bool(const char *name, int32_t fallback);
void speccy_core_set_option_bool(const char *name, int32_t value);

/* Flush options to unreal_speccy_portable.xml under the profile dir. */
void speccy_core_store_options(void);

/* ------------------------------------------------------------------ status */

/* Measured frames per second, x100 (so 5000 == 50.00fps). */
int32_t speccy_core_get_fps_x100(void);

/* Replay (rzx) progress. Any pointer may be NULL. 1 if a replay is active. */
int32_t speccy_core_replay_progress(int32_t *frame_current,
                                    int32_t *frames_total,
                                    int32_t *frames_cached);

#ifdef __cplusplus
}
#endif

#endif /* RETRO_SPECTRUM_SPECCY_BRIDGE_H */